--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
       content="沈阳航空航天大学 绩点计算器"
     />
     <link href="https://cdn.bootcdn.net/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/icon512.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo512.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
